--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -83,16 +83,16 @@ Fishing.Effect.2=Cazador M\u00e1gico
 Fishing.Effect.3=Encuentra Objetos Encantados
 Fishing.Effect.4=Sacudir (contra Entidades)
 Fishing.Effect.5=Sacudir los items fuera de los monstruos con la ca\u00f1a de pescar
-Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
+Fishing.Enchant.Chance=[[RED]]Probabilidad de Cazador M\u00e1gico: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]\u00a1Tesoro encontrado!
 Fishing.Listener=Pescador: 
 Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
 Fishing.SkillName=PESCADOR
 Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
+Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Dieta del Granjero: [[YELLOW]]Rango {0}
 Herbalism.Ability.GTe.Length=[[RED]]Duraci\u00f3n de Tierra Verde: [[YELLOW]]{0}seg
-Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
+Herbalism.Ability.GTh.Chance=[[RED]]Probabilidad de Pulgar Verde: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**PULGAR VERDE FALL\u00d3**
 Herbalism.Ability.GTh.Stage=[[RED]]Etapa de Pulgar Verde: [[YELLOW]]El trigo crece en etapa {0}
 Herbalism.Ability.GTh=[[GREEN]]**PULGAR VERDE**
@@ -102,8 +102,8 @@ Herbalism.Effect.0=Tierra Verde (HABILIDAD)
 Herbalism.Effect.1=Arar la Tierra, Triple Drops
 Herbalism.Effect.2=Pulgar Verde (Trigo)
 Herbalism.Effect.3=Planta trigo autom\u00e1ticamente al recolectar
-Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick/Dirt)
-Herbalism.Effect.5=Make bricks mossy, or make grass grow
+Herbalism.Effect.4=Pulgar Verde (Roca/Ladrillos de Piedra/Tierra)
+Herbalism.Effect.5=Haces ladrillos mohosos o hacer crecer el pasto
 Herbalism.Effect.6=Dieta del Granjero
 Herbalism.Effect.7=Aumenta el hambre restaurada por la comida cultivada
 Herbalism.Effect.8=Doble Drops (Todas las Hierbas)
@@ -132,8 +132,8 @@ Mining.Effect.6=Mayores Bombas
 Mining.Effect.7=Incrementa el radio de la explosi\u00f3n de TNT
 Mining.Effect.8=Experto en Demoliciones
 Mining.Effect.9=Reduce el da\u00f1o de las explosiones de TNT
-Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
+Mining.Effect.Decrease=[[RED]]Da\u00f1o de Experto en Demolici\u00f3n Decrementado: [[YELLOW]]{0}
+Mining.Effect.DropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
 Mining.Listener=Miner\u00eda: 
 Mining.SkillName=MINER\u00cdA
 Mining.Skills.SuperBreaker.Off=[[RED]]**S\u00faper Destructor ha expirado**
@@ -156,13 +156,13 @@ Mining.Blast.Rank=[[RED]]Miner\u00eda Explosiva: [[YELLOW]] Rango {0}/8 [[GRAY]]
 Mining.Blast.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Miner\u00eda Explosiva!
 Mining.Blast.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Miner\u00eda Explosiva [[GREEN]]est\u00e1 refrescada!
 Repair.Effect.0=Reparaci\u00f3n
-Repair.Effect.1=Repair Tools & Armor
-Repair.Effect.10=Gold Repair ({0}+ SKILL)
-Repair.Effect.11=Repair Gold Tools & Armor
-Repair.Effect.12=Iron Repair ({0}+ SKILL)
-Repair.Effect.13=Repair Iron Tools & Armor
-Repair.Effect.14=Stone Repair ({0}+ SKILL)
-Repair.Effect.15=Repair Stone Tools
+Repair.Effect.1=Reparar Herramientas y Armaduras
+Repair.Effect.10=Reparar Oro (HABILIDAD {0}+)
+Repair.Effect.11=Reparar Herramientas y Armaduras de Oro
+Repair.Effect.12=Reparar Metal (HABILIDAD {0}+)
+Repair.Effect.13=Reparar Herramientas y Armaduras de Metal
+Repair.Effect.14=Reparar Piedra (HABILIDAD {0}+)
+Repair.Effect.15=Reparar Herramientas de Piedra
 Repair.Effect.2=Maestr\u00eda de la Reparaci\u00f3n
 Repair.Effect.3=Cantidad de reparaci\u00f3n Incrementada
 Repair.Effect.4=S\u00faper Reparaci\u00f3n
@@ -178,15 +178,15 @@ Repair.Skills.AdeptDiamond=[[DARK_RED]]No tienes la suficiente habilidad para re
 Repair.Skills.AdeptGold=[[DARK_RED]]No tienes la suficiente habilidad para reparar Oro.
 Repair.Skills.AdeptIron=[[DARK_RED]]No tienes la suficiente habilidad para reparar Hierro.
 Repair.Skills.AdeptStone=[[DARK_RED]]No tienes la suficiente habilidad para reparar Piedra.
-Repair.Skills.Adept=[[RED]]You must be level [[YELLOW]]{0}[[RED]] to repair [[YELLOW]]{1}
+Repair.Skills.Adept=[[RED]]Debes ser nivel [[YELLOW]]{0}[[RED]] para reparar [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]Eso ha sido f\u00e1cil.
 Repair.Skills.FullDurability=[[GRAY]]Esto est\u00e1 nuevo.
-Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
+Repair.Skills.Mastery=[[RED]]Maestr\u00eda de la Reparaci\u00f3n: [[YELLOW]]{0} de durabilidad adicional restaurada
 Repair.Skills.StackedItems=[[DARK_RED]]No puedes reparar items apilados.
-Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
+Repair.Skills.Super.Chance=[[RED]]Probabilidad de Super Reparaci\u00f3n: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Habilidad de Reparaci\u00f3n incrementada en {0}. Total ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
-Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilidad de Degradaci\u00f3n en la Forja Arcana: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]Probabilidad de Exito en la Forja Arcana: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]El poder Arcano de este objeto ha disminu\u00eddo.
 Repair.Arcane.Fail=[[RED]]El objeto ha perdido permanentemente sus poderes Arcanos
 Repair.Arcane.Lost=[[RED]]No tienes habilidad suficiente para mantener ning\u00fan tipo de encantamientos.
@@ -194,12 +194,13 @@ Repair.Arcane.Perfect=[[GREEN]]Has logrado mantener las energ\u00edas Arcanas de
 Repair.Arcane.Rank=[[RED]]Forja Arcana: [[YELLOW]]Rango {0}/4
 Swords.Ability.Lower=[[GRAY]]**BAJAS TU ESPADA**
 Swords.Ability.Ready=[[GREEN]]**PREPARASTE TU ESPADA**
-Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
+Swords.Combat.Bleed.Chance=[[RED]]Probabilidad de Sangramiento: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Duraci\u00f3n del Sangrado: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTA: [[YELLOW]]1 Tick sucede cada 2 segundos
+Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u00a1El sangrado ha [[GREEN]]parado[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ENEMIGO SANGRANDO**
-Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
+Swords.Combat.Counter.Chance=[[RED]]Probabilidad de Contra Ataque: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]\u00a1Alcanzado por un contra ataque!
 Swords.Combat.Countered=[[GREEN]]**CONTRA-ATACADO**
 Swords.Combat.SS.Struck=[[DARK_RED]]\u00a1Golpeado por ATAQUE DENTADO!
@@ -234,9 +235,9 @@ Taming.Ability.Locked.1=BLOQUEADO HASTA 250+ SKILL (PIEL GRUESA)
 Taming.Ability.Locked.2=BLOQUEADO HASTA 500+ SKILL (A PRUEBA DE GOLPES)
 Taming.Ability.Locked.3=BLOQUEADO HASTA 750+ SKILL (GARRAS AFILADAS)
 Taming.Ability.Locked.4=BLOQUEADO HASTA 50+ SKILL (SERVICIO DE COMIDA R\u00c1PIDA)
-Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}
+Taming.Combat.Chance.Gore=[[RED]]Probabilidad de Gore: [[YELLOW]]{0}
 Taming.Effect.0=Conocimiento de la Bestia
-Taming.Effect.1=Bone-whacking inspects wolves & ocelots
+Taming.Effect.1=Golpear con un hueso para inspeccionar los lobos y ocelotes
 Taming.Effect.10=A Prueba de Golpes
 Taming.Effect.11=Reducci\u00f3n de Da\u00f1o por Explosiones
 Taming.Effect.12=Llamado a la Naturaleza
@@ -263,8 +264,8 @@ Taming.Summon.Fail.Wolf=[[RED]]Tienes demasiados lobos cerca como para convocar 
 Unarmed.Ability.Berserk.Length=[[RED]]Duraci\u00f3n de Enloquecido: [[YELLOW]]{0}seg
 Unarmed.Ability.Bonus.0=Estilo del Pu\u00f1o de Hierro
 Unarmed.Ability.Bonus.1=+{0} Mejora de DA\u00d1O
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
-Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Probabilidad de Desviar Flechas: [[YELLOW]]{0}%
+Unarmed.Ability.Chance.Disarm=[[RED]]Probabilidad de Desarmar: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**BAJAS TUS PU\u00d1OS**
 Unarmed.Ability.Ready=[[GREEN]]**LEVANTASTE LA GUARDIA**
 Unarmed.Effect.0=Enloquecido (HABILIDAD)
@@ -285,7 +286,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]\u00a1T\u00fa habilidad [[YELLOW]]Enloqu
 Unarmed.Skillup=[[YELLOW]]Habilidad de Desarmado incrementada en {0}. Total ({1})
 Woodcutting.Ability.0=Soplador de Hojas
 Woodcutting.Ability.1=Remover hojas
-Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
+Woodcutting.Ability.Chance.DDrop=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Duraci\u00f3n de Ca\u00edda de \u00c1rbol: [[YELLOW]]{0}seg
 Woodcutting.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 100+ (SOPLADOR DE HOJAS)
 Woodcutting.Effect.0=Ca\u00edda de \u00c1rbol (HABILIDAD)
@@ -365,7 +366,7 @@ mcMMO.MOTD=[[BLUE]]Este servidor est\u00e1 utilizando mcMMO {0}! \nEscriba [[YEL
 mcMMO.NoInvites=[[RED]]No tienes invitaciones en este momento
 mcMMO.NoPermission=[[DARK_RED]]Permisos insuficientes.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si no tienes acceso a una habilidad no ser\u00e1 mostrada aqu\u00ed.
-mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
+mcMMO.Website=[[BLUE]]P\u00e1gina Web de mcMMO - [[GREEN]]http://forums.mcmmo.info
 Commands.Party.InParty=[[GREEN]]Grupo: {0}
 Party.Forbidden=[mcMMO] No se permiten grupos en este mundo (Ver permisos)
 Party.Help.0=[[RED]]El uso correcto es \'/party <nombre del grupo>\' para unirse o \'/party q\' para salir
@@ -416,7 +417,7 @@ XPRate.Event=[[GOLD]]\u00a1mcMMO est\u00e1 ahora en un evento de rate de EXP! \u
 Effects.Effects=EFECTOS
 Effects.Level=[[DARK_GRAY]]Nivel: [[GREEN]]{0} [[DARK_AQUA]]EXP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
-Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
+Guides.Acrobatics=[[GRAY]]\u00a1Gu\u00eda pr\u00f3ximamente!
 Guides.Archery=Gu\u00eda pr\u00f3ximamente...
 Guides.Axes=Gu\u00eda pr\u00f3ximamente...
 Guides.Excavation=[[DARK_AQUA]]Sobre Excavaci\u00f3n:\n[[YELLOW]]Es el acto de excavar tierra para encontrar tesoros.\n[[YELLOW]]Cuanto m\u00e1s haces esto mas tesoros puedes encontrar.\n[[DARK_AQUA]]Ganancia de Experiencia:\n[[YELLOW]]Para obtener EXP en esta habilidad necesitas usar una pala.\n[[YELLOW]]Solo ciertos materiales pueden ser excavados para\n[[YELLOW]]obtener tesoros y EXP.\n[[DARK_AQUA]]Materiales Compatibles:\n[[YELLOW]]Pasto, Tierra, Arena, Arcilla, Grava y Arena del Infierno.\n[[DARK_AQUA]]Como usar Ultra Taladro Destructor:\n[[YELLOW]]Con una pala en mano hacer click derecho para prepararla.\n[[YELLOW]]Cuando est\u00e1 en este estado tienes cerca de 4 segundos para\n[[YELLOW]]hacer contacto con un material compatible para activar\n[[YELLOW]]la habilidad Ultra Taladro Destructor.\n[[DARK_AQUA]]\u00bfQu\u00e9 es Ultra Taladro Destructor?\n[[YELLOW]]Ultra Taladro Destructor es una habilidad limitada\n[[YELLOW]]relacionada a la habilidad de Excavaci\u00f3n. Triplica la\n[[YELLOW]]probabilidad de encontrar tesoros y activa destrucci\u00f3n\n[[YELLOW]]instant\u00e1nea de materiales de Excavaci\u00f3n.\n[[DARK_AQUA]]\u00bfC\u00f3mo funciona Cazados de Tesoros?\n[[YELLOW]]Cada posible tesoro de Excavaci\u00f3n tiene su propio nivel de\n[[YELLOW]]habilidad requerida para obtenerla, como resultado de esto\n[[YELLOW]]es dif\u00edcil decir cuanto te ayuda esto.\n[[YELLOW]]Solo recuerda que cuanto mayor nivel tengas, m\u00e1s tesoros\n[[YELLOW]]encontrar\u00e1s. Y tambi\u00e9n recuerda que cada tipo de material\n[[YELLOW]]de Excavaci\u00f3n tiene su propia lista de tesoros.\n[[YELLOW]]En otras palabras, encontrar\u00e1s diferentes tesoros en\n[[YELLOW]]Tierra que los que encontrar\u00edas en Grava.\n[[DARK_AQUA]]Notas sobre Excavaci\u00f3n:\n[[YELLOW]]Los drops son completamente personalizables, as\u00ed que\n[[YELLOW]]los resultados var\u00edan de un servidor a otro.
@@ -428,7 +429,7 @@ Guides.Swords=Gu\u00eda pr\u00f3ximamente...
 Guides.Taming=Gu\u00eda pr\u00f3ximamente...
 Guides.Unarmed=Gu\u00eda pr\u00f3ximamente...
 Guides.Woodcutting=Gu\u00eda pr\u00f3ximamente...
-Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
+Inspect.Offline=[[RED]]\u00a1No tienen permiso para inspeccionar jugadores fuera de linea!
 Inspect.OfflineStats=Estad\u00edsticas de mcMMO para el Jugador Desconectado [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]Estad\u00edsticas de mcMMO para [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]\u00a1Est\u00e1s demasiado lejos como para inspeccionar a ese jugador!
