--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -197,6 +197,7 @@ Swords.Ability.Ready=[[GREEN]]**PREPARI LA SPADA**
 Swords.Combat.Bleed.Chance=[[RED]]Possibilit\u00e0 di Emorragia: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Durata di Emorragia: [[YELLOW]]{0} tick
 Swords.Combat.Bleed.Note=[[GRAY]]Nota: [[YELLOW]]1 Tick si verifica ogni 2 secondi
+Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]L\'emorragia si \u00e8 [[GREEN]]fermata[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**IL NEMICO HA UN\'EMORRAGIA**
 Swords.Combat.Counter.Chance=[[RED]]Possibilit\u00e0 di Contrattacco: [[YELLOW]]{0}
