--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -1,19 +1,19 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Graceful Landing**
 Acrobatics.Combat.Proc=[[GREEN]]**Dodged**
-Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
+Acrobatics.DodgeChance=[[RED]]Szansa na Unik: [[YELLOW]]{0}
 Acrobatics.Effect.0=Roll
 Acrobatics.Effect.1=Reduces or Negates fall damage
 Acrobatics.Effect.2=Graceful Roll
-Acrobatics.Effect.3=Twice as effective as a normal Roll
-Acrobatics.Effect.4=Dodge
-Acrobatics.Effect.5=Reduce attack damage by half
+Acrobatics.Effect.3=Dwukrotnie bardziej efektywne niz zwykly Przewrot
+Acrobatics.Effect.4=Unik
+Acrobatics.Effect.5=Redukuje obrazenia od upadku o polowe
 Acrobatics.Listener=Acrobatics:
 Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rolled**
 Acrobatics.SkillName=ACROBATICS
 Acrobatics.Skillup=[[YELLOW]]Acrobatics skill increased by {0}. Total ({1})
-Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
+Archery.Combat.DazeChance=[[RED]]Szansa na Oszolomienie: [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
 Archery.Effect.0=Skill Shot
@@ -23,7 +23,7 @@ Archery.Effect.3=Disorients foes and deals 4 DMG
 Archery.Effect.4=Arrow Retrieval
 Archery.Effect.5=Chance to retrieve arrows from corpses
 Archery.Listener=Archery:
-Archery.SkillName=ARCHERY
+Archery.SkillName=LUCZNICTWO
 Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
 Axes.Ability.Bonus.0=Axe Mastery
 Axes.Ability.Bonus.1=Bonus {0} damage
@@ -36,7 +36,7 @@ Axes.Ability.Ready=[[GREEN]]**YOU READY YOUR AXE**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]Struck by CLEAVE!
 Axes.Combat.CritStruck=[[DARK_RED]]You were CRITICALLY hit!
 Axes.Combat.CritChance=[[RED]]Chance to critically strike: [[YELLOW]]{0}%
-Axes.Combat.CriticalHit=[[RED]]CRITICAL HIT!
+Axes.Combat.CriticalHit=[[RED]]TRAFIENIE KRYTYCZNE!
 Axes.Combat.GI.Proc=[[GREEN]]**STRUCK WITH GREAT FORCE**
 Axes.Combat.GI.Struck=[[RED]]**HIT BY GREATER IMPACT**
 Axes.Combat.SS.Length=[[RED]]Skull Splitter Length: [[YELLOW]]{0}s
@@ -50,7 +50,7 @@ Axes.Effect.6=Impact
 Axes.Effect.7=Strike with enough force to shatter armor
 Axes.Effect.8=Greater Impact
 Axes.Effect.9=Deal bonus damage to unarmored foes
-Axes.Listener=Axes:
+Axes.Listener=Siekiery:
 Axes.SkillName=AXES
 Axes.Skills.SS.Off=[[RED]]**Skull Splitter has worn off**
 Axes.Skills.SS.On=[[GREEN]]**Skull Splitter ACTIVATED**
@@ -75,19 +75,19 @@ Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used 
 Excavation.Skillup=[[YELLOW]]Excavation skill increased by {0}. Total ({1})
 Fishing.Ability.Info=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter Rank**
 Fishing.Ability.Locked.0=LOCKED UNTIL 150+ SKILL (SHAKE)
-Fishing.Ability.Rank=[[RED]]Treasure Hunter Rank: [[YELLOW]]{0}/5
+Fishing.Ability.Rank=[[RED]]Ranga lowienia skarbow: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
-Fishing.Effect.0=Treasure Hunter (Passive)
+Fishing.Effect.0=Lowca Skarbow (Pasywna)
 Fishing.Effect.1=Fish up misc. objects
-Fishing.Effect.2=Magic Hunter
-Fishing.Effect.3=Find Enchanted Items
+Fishing.Effect.2=Magiczny Lowca
+Fishing.Effect.3=Znajdowanie Zakletych Przedmiotow
 Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
 Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Treasure found!
 Fishing.Listener=Fishing:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
-Fishing.SkillName=FISHING
+Fishing.SkillName=LOWIENIE RYB
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
@@ -100,8 +100,8 @@ Herbalism.Ability.Lower=[[GRAY]]**YOU LOWER YOUR HOE**
 Herbalism.Ability.Ready=[[GREEN]]**YOU READY YOUR HOE**
 Herbalism.Effect.0=Green Terra (ABILITY)
 Herbalism.Effect.1=Spread the Terra, 3x Drops
-Herbalism.Effect.2=Green Thumb (Wheat)
-Herbalism.Effect.3=Auto-Plants wheat when harvesting
+Herbalism.Effect.2=Zielony palec (Pszenica)
+Herbalism.Effect.3=Automatyczne zasadzanie pszenicy przy zniwie.
 Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick/Dirt)
 Herbalism.Effect.5=Make bricks mossy, or make grass grow
 Herbalism.Effect.6=Farmer\'s Diet
@@ -121,17 +121,17 @@ Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
 Mining.Ability.Locked.2=LOCKED UNTIL 500+ SKILL (DEMOLITIONS EXPERTISE)
 Mining.Ability.Lower=[[GRAY]]**YOU LOWER YOUR PICKAXE**
-Mining.Ability.Ready=[[GREEN]]**YOU READY YOUR PICKAXE**
+Mining.Ability.Ready=[[GREEN]]**PRZYGOTOWUJESZ SWOJA SIEKIERE**
 Mining.Effect.0=Super Breaker (ABILITY)
 Mining.Effect.1=Speed+, Triple Drop Chance
 Mining.Effect.2=Double Drops
 Mining.Effect.3=Double the normal loot
 Mining.Effect.4=Blast Mining
-Mining.Effect.5=Bonuses to mining with TNT
-Mining.Effect.6=Bigger Bombs
-Mining.Effect.7=Increases TNT explosion radius
+Mining.Effect.5=Bonus do wydobycia z TNT
+Mining.Effect.6=Wieksze bomby
+Mining.Effect.7=Zwieksza zasieg wybuchu TNT
 Mining.Effect.8=Demolitions Expertise
-Mining.Effect.9=Decreases damage from TNT explosions
+Mining.Effect.9=Zmniejsza obrazenia od explozji TNT
 Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
 Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Mining.Listener=Mining:
@@ -183,7 +183,7 @@ Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
-Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
+Repair.Skills.Super.Chance=[[RED]]Szansa na Super Naprawe: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Repair skill increased by {0}. Total ({1})
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
 Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
@@ -197,6 +197,7 @@ Swords.Ability.Ready=[[GREEN]]**YOU READY YOUR SWORD**
 Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Bleed Length: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
+Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]The bleeding has [[GREEN]]stopped[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ENEMY BLEEDING**
 Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
@@ -209,7 +210,7 @@ Swords.Effect.2=Serrated Strikes (ABILITY)
 Swords.Effect.3=25% DMG AoE, Bleed+ AoE
 Swords.Effect.4=Serrated Strikes Bleed+
 Swords.Effect.5=5 Tick Bleed
-Swords.Effect.6=Bleed
+Swords.Effect.6=Krwawienie
 Swords.Effect.7=Apply a bleed DoT
 Swords.Listener=Swords:
 Swords.SkillName=SWORDS
@@ -226,7 +227,7 @@ Taming.Ability.Bonus.3=1/2 Damage, Fire Resistance
 Taming.Ability.Bonus.4=Shock Proof
 Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
 Taming.Ability.Bonus.6=Sharpened Claws
-Taming.Ability.Bonus.7=+2 Damage
+Taming.Ability.Bonus.7=+2 do Obrazen
 Taming.Ability.Bonus.8=Fast Food Service
 Taming.Ability.Bonus.9=50% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL 100+ SKILL (ENVIRONMENTALLY AWARE)
@@ -266,15 +267,15 @@ Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
-Unarmed.Ability.Ready=[[GREEN]]**YOU READY YOUR FISTS**
-Unarmed.Effect.0=Berserk (ABILITY)
-Unarmed.Effect.1=+50% DMG, Breaks weak materials
-Unarmed.Effect.2=Disarm (Players)
+Unarmed.Ability.Ready=[[GREEN]]**PRZYGOTOWUJESZ SWOJE PIESCI**
+Unarmed.Effect.0=Berserk (Zdolnosc)
+Unarmed.Effect.1=+50% DMG, Niszczy slabe materialy
+Unarmed.Effect.2=Rozbrojenie
 Unarmed.Effect.3=Drops the foes item held in hand
-Unarmed.Effect.4=Iron Arm Style
+Unarmed.Effect.4=Styl zelaznego ramienia
 Unarmed.Effect.5=Hardens your arm over time
-Unarmed.Effect.6=Arrow Deflect
-Unarmed.Effect.7=Deflect arrows
+Unarmed.Effect.6=Odbicie strzaly
+Unarmed.Effect.7=Odbijanie strzal
 Unarmed.Listener=Unarmed:
 Unarmed.SkillName=UNARMED
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserk has worn off**
@@ -330,8 +331,8 @@ Commands.GodMode.Enabled=[[YELLOW]]mcMMO Godmode Enabled
 Commands.GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 Commands.Inspect=<player> [[RED]]- View detailed player info
 Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
-Commands.Invite.Success=[[GREEN]]Invite sent successfully.
-Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
+Commands.Invite.Success=[[GREEN]]Pomyslnie wyslano zaproszenie
+Commands.Leaderboards=<skill> <page> [[RED]]- Rankingi
 Commands.mcgod=[[RED]]- Toggle GodMode
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.ModDescription=[[RED]]- Read brief mod description
@@ -344,25 +345,25 @@ Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite
 Commands.Party.Invite=<player> [[RED]]- Send party invite
-Commands.Party.Join=Joined Party: {0}
+Commands.Party.Join=Dolaczyles do Grupy: {0}
 Commands.Party.Kick=[[RED]]You were kicked from party {0}!
 Commands.Party.Leave=[[RED]]You have left that party
 Commands.Party.Members=[[GREEN]]Party Members: {0}
 Commands.Party.None=[[RED]]You are not in a party.
 Commands.Party.Quit=[[RED]]- Leave your current party
-Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
+Commands.Party.Teleport=<player> [[RED]]- Teleportacja do czlonka grupy.
 Commands.Party.Toggle=[[RED]]- Toggle Party Chat
 Commands.Party=<party-name> [[RED]]- Create/Join designated party
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Power Level [[YELLOW]]Leaderboard--
 Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
 Commands.Skill.Invalid=[[RED]]That is not a valid skillname!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Leaderboard--
-Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
+Commands.SkillInfo=/<skill> [[RED]]- Pokazuje szczegolowe informacje na temat umiejetnosci
 Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
 mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[BLUE]] for help.
-mcMMO.NoInvites=[[RED]]You have no invites at this time
+mcMMO.NoInvites=[[RED]]Nie masz zadnych zaproszen
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
 mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
@@ -379,7 +380,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <playe
 Party.InformedOnJoin={0} [[GREEN]] dolaczyl do twojej grupy.
 Party.InformedOnQuit={0} [[GREEN]] wyszedl z twojej grupy.
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
-Party.IsLocked=[[RED]]This party is already locked!
+Party.IsLocked=[[RED]]Ta grupa jest juz zamknieta!
 Party.IsntLocked=[[RED]]This party is not locked!
 Party.Locked=[[RED]]Grupa jest zamknieta, tylko wlasciciel moze dodac graczy.
 Party.NotInYourParty=[[DARK_RED]]{0} nie jest czlonkiem twojej grupy.
@@ -391,18 +392,18 @@ Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
 Party.Unlocked=[[GRAY]]Grupa jest otwarta dla wszystkich.
-Commands.XPGain.Acrobatics=Falling
+Commands.XPGain.Acrobatics=Upadanie
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Attacking Monsters
 Commands.XPGain.Excavation=Digging and finding treasures
 Commands.XPGain.Fishing=Fishing (Go figure!)
 Commands.XPGain.Herbalism=Harvesting Herbs
 Commands.XPGain.Mining=Mining Stone & Ore
-Commands.XPGain.Repair=Repairing
+Commands.XPGain.Repair=Naprawianie
 Commands.XPGain.Swords=Attacking Monsters
 Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
 Commands.XPGain.Unarmed=Attacking Monsters
-Commands.XPGain.WoodCutting=Chopping down trees
+Commands.XPGain.WoodCutting=Scina drzewa
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
@@ -414,7 +415,7 @@ Commands.xprate.started.0=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
 Commands.xprate.started.1=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
 XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 Effects.Effects=EFFECTS
-Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
+Effects.Level=[[DARK_GRAY]]Poziom: [[GREEN]]{0} [[DARK_AQUA]]Doswiadczenie[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Guide coming soon...
