--- a/src/main/resources/locale/locale_tr_TR.properties
+++ b/src/main/resources/locale/locale_tr_TR.properties
@@ -1,5 +1,5 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Graceful Landing**
-Acrobatics.Combat.Proc=[[GREEN]]**Ontweken**
+Acrobatics.Combat.Proc=[[GREEN]]**Dodged**
 Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=Roll
 Acrobatics.Effect.1=Reduces or Negates fall damage
@@ -11,8 +11,8 @@ Acrobatics.Listener=Acrobatics:
 Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rolled**
-Acrobatics.SkillName=ACROBATIEK
-Acrobatics.Skillup=[[YELLOW]]Acrobatiek toegenomen met {0}. Totaal ({1})
+Acrobatics.SkillName=ACROBATICS
+Acrobatics.Skillup=[[YELLOW]]Acrobatics skill increased by {0}. Total ({1})
 Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
@@ -24,7 +24,7 @@ Archery.Effect.4=Arrow Retrieval
 Archery.Effect.5=Chance to retrieve arrows from corpses
 Archery.Listener=Archery:
 Archery.SkillName=ARCHERY
-Archery.Skillup=[[YELLOW]]Boogschieten toegenomen met {0}. Totaal ({1})
+Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
 Axes.Ability.Bonus.0=Axe Mastery
 Axes.Ability.Bonus.1=Bonus {0} damage
 Axes.Ability.Bonus.2=Impact
@@ -38,7 +38,7 @@ Axes.Combat.CritStruck=[[DARK_RED]]You were CRITICALLY hit!
 Axes.Combat.CritChance=[[RED]]Chance to critically strike: [[YELLOW]]{0}%
 Axes.Combat.CriticalHit=[[RED]]CRITICAL HIT!
 Axes.Combat.GI.Proc=[[GREEN]]**STRUCK WITH GREAT FORCE**
-Axes.Combat.GI.Struck=[[RED]]**GETROFFEN MET MEER SCHADE**
+Axes.Combat.GI.Struck=[[RED]]**HIT BY GREATER IMPACT**
 Axes.Combat.SS.Length=[[RED]]Skull Splitter Length: [[YELLOW]]{0}s
 Axes.Effect.0=Skull Splitter (Ability)
 Axes.Effect.1=Deal AoE Damage
@@ -66,7 +66,7 @@ Excavation.Effect.2=Treasure Hunter
 Excavation.Effect.3=Ability to dig for treasure
 Excavation.Effect.Length=[[RED]]Giga Drill Breaker Length: [[YELLOW]]{0}s
 Excavation.Listener=Excavation:
-Excavation.SkillName=Uitgraving
+Excavation.SkillName=EXCAVATION
 Excavation.Skills.GigaDrillBreaker.Off=[[RED]]**Giga Drill Breaker has worn off**
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER ACTIVATED**
 Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Giga Drill Breaker [[GREEN]]ability is refreshed!
@@ -85,9 +85,9 @@ Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
 Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Treasure found!
-Fishing.Listener=Vissen:
+Fishing.Listener=Fishing:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
-Fishing.SkillName=FISHING
+Fishing.SkillName=BALIK TUTMA
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
@@ -108,7 +108,7 @@ Herbalism.Effect.6=Farmer\'s Diet
 Herbalism.Effect.7=Improves hunger restored from farmed foods
 Herbalism.Effect.8=Double Drops (All Herbs)
 Herbalism.Effect.9=Double the normal loot
-Herbalism.Listener=Kruidkunde
+Herbalism.Listener=Herbalism:
 Herbalism.SkillName=HERBALISM
 Herbalism.Skills.GTe.Off=[[RED]]**Green Terra has worn off**
 Herbalism.Skills.GTe.On=[[GREEN]]**GREEN TERRA ACTIVATED**
@@ -121,7 +121,7 @@ Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
 Mining.Ability.Locked.2=LOCKED UNTIL 500+ SKILL (DEMOLITIONS EXPERTISE)
 Mining.Ability.Lower=[[GRAY]]**YOU LOWER YOUR PICKAXE**
-Mining.Ability.Ready=[[GREEN]]**JE HOUDT JE PICKAXE GEREED**
+Mining.Ability.Ready=[[GREEN]]**YOU READY YOUR PICKAXE**
 Mining.Effect.0=Super Breaker (ABILITY)
 Mining.Effect.1=Speed+, Triple Drop Chance
 Mining.Effect.2=Double Drops
@@ -141,7 +141,7 @@ Mining.Skills.SuperBreaker.On=[[GREEN]]**SUPER BREAKER ACTIVATED**
 Mining.Skills.SuperBreaker.Other.Off=[[RED]]Super Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Super Breaker!
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Super Breaker [[GREEN]]ability is refreshed!
-Mining.Skillup=[[YELLOW]]Mijn ervaring toegenomen by {0}. Totaal ({1})
+Mining.Skillup=[[YELLOW]]Mining skill increased by {0}. Total ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
 Mining.Blast.Effect.0=+35% ore yield
 Mining.Blast.Effect.1=+40% ore yield
@@ -170,16 +170,16 @@ Repair.Effect.5=Double effectiveness
 Repair.Effect.6=Diamond Repair ({0}+ SKILL)
 Repair.Effect.7=Repair Diamond Tools & Armor
 Repair.Effect.8=Arcane Forging
-Repair.Effect.9=Magische voorwerpen repareren
-Repair.Listener.Anvil=[[DARK.RED]]Je hebt een aambeeld geplaatst, met een aambeeld kun je je gereedschappen en pantser mee repareren
+Repair.Effect.9=Repair magic items
+Repair.Listener.Anvil=[[DARK_RED]]You have placed an anvil, anvils can repair tools and armor.
 Repair.Listener=Repair:
 Repair.SkillName=REPAIR
-Repair.Skills.AdeptDiamond=[[DARK_RED]]Je bent nog niet sterk genoeg om diamant te repareren.
-Repair.Skills.AdeptGold=[[DARK_RED]]Je bent niet goed genoeg om goud te repareren.
+Repair.Skills.AdeptDiamond=[[DARK_RED]]You\'re not skilled enough to repair Diamond.
+Repair.Skills.AdeptGold=[[DARK_RED]]You\'re not skilled enough to repair Gold.
 Repair.Skills.AdeptIron=[[DARK_RED]]You\'re not skilled enough to repair Iron.
-Repair.Skills.AdeptStone=[[DARK_RED]]Je bent nog niet sterk genoeg om steen te repareren.
+Repair.Skills.AdeptStone=[[DARK_RED]]You\'re not skilled enough to repair Stone.
 Repair.Skills.Adept=[[RED]]You must be level [[YELLOW]]{0}[[RED]] to repair [[YELLOW]]{1}
-Repair.Skills.FeltEasy=[[GRAY]]Dat ging makkelijk.
+Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
@@ -188,7 +188,7 @@ Repair.Skillup=[[YELLOW]]Repair skill increased by {0}. Total ({1})
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
 Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
-Repair.Arcane.Fail=[[RED]]Arcane krachten hebben het voorwerp verlaten.
+Repair.Arcane.Fail=[[RED]]Arcane power has permanently left the item.
 Repair.Arcane.Lost=[[RED]]You were not skilled enough to keep any enchantments.
 Repair.Arcane.Perfect=[[GREEN]]You have sustained the arcane energies in this item.
 Repair.Arcane.Rank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
@@ -198,8 +198,8 @@ Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Bleed Length: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
 Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
-Swords.Combat.Bleeding.Stopped=[[GRAY]]Het bloeden is [[GREEN]]Gestopt[[GRAY]]!
-Swords.Combat.Bleeding=[[GREEN]]**VIJAND BLOED**
+Swords.Combat.Bleeding.Stopped=[[GRAY]]The bleeding has [[GREEN]]stopped[[GRAY]]!
+Swords.Combat.Bleeding=[[GREEN]]**ENEMY BLEEDING**
 Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
 Swords.Combat.Countered=[[GREEN]]**COUNTER-ATTACKED**
@@ -278,25 +278,25 @@ Unarmed.Effect.6=Arrow Deflect
 Unarmed.Effect.7=Deflect arrows
 Unarmed.Listener=Unarmed:
 Unarmed.SkillName=UNARMED
-Unarmed.Skills.Berserk.Off=[[RED]]**Razernij is uitgewerkt**
+Unarmed.Skills.Berserk.Off=[[RED]]**Berserk has worn off**
 Unarmed.Skills.Berserk.On=[[GREEN]]**BERSERK ACTIVATED**
 Unarmed.Skills.Berserk.Other.Off=[[RED]]Berserk[[GREEN]] has worn off for [[YELLOW]]{0}
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Berserk!
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]Your [[YELLOW]]Berserk [[GREEN]]ability is refreshed!
 Unarmed.Skillup=[[YELLOW]]Unarmed skill increased by {0}. Total ({1})
-Woodcutting.Ability.0=Bladblazer
-Woodcutting.Ability.1=Blaadjes wegblazen
+Woodcutting.Ability.0=Leaf Blower
+Woodcutting.Ability.1=Blow away leaves
 Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Tree Feller Length: [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=LOCKED UNTIL 100+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=Tree Feller (ABILITY)
 Woodcutting.Effect.1=Make trees explode
-Woodcutting.Effect.2=Bladblazer
+Woodcutting.Effect.2=Leaf Blower
 Woodcutting.Effect.3=Blow Away Leaves
 Woodcutting.Effect.4=Double Drops
 Woodcutting.Effect.5=Double the normal loot
-Woodcutting.Listener=Houthakken
-Woodcutting.SkillName=Houthakken
+Woodcutting.Listener=Woodcutting:
+Woodcutting.SkillName=WOODCUTTING
 Woodcutting.Skills.TreeFeller.Off=[[RED]]**Tree Feller has worn off**
 Woodcutting.Skills.TreeFeller.On=[[GREEN]]**TREE FELLER ACTIVATED**
 Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]]Your [[YELLOW]]Tree Feller [[GREEN]]ability is refreshed!
@@ -308,20 +308,20 @@ Woodcutting.Skillup=[[YELLOW]]Woodcutting skill increased by {0}. Total ({1})
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
-Combat.ArrowDeflect=[[WHITE]]**PIJL AFWIJKING**
-Combat.BeastLore=[[GREEN]]**WOLFINSPECTIE**
-Combat.BeastLoreHealth=[[DARK_AQUA]]Levens ([[GREEN]]{0}[[DARK_AQUA]]/{1})
-Combat.BeastLoreOwner=[[DARK_AQUA]]Eigenaar ([[RED]]{0}[[DARK_AQUA]])
-Combat.BurningArrowHit=[[DARK_RED]]Je bent geraakt door een brandende pijl\\!
-Combat.Gore=[[GREEN]]**GESTOLD BLOED**
+Combat.ArrowDeflect=[[WHITE]]**ARROW DEFLECT**
+Combat.BeastLore=[[GREEN]]**BEAST LORE**
+Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+Combat.BeastLoreOwner=[[DARK_AQUA]]Owner ([[RED]]{0}[[DARK_AQUA]])
+Combat.BurningArrowHit=[[DARK_RED]]You were struck by a burning arrow!
+Combat.Gore=[[GREEN]]**GORED**
 Combat.Ignition=[[RED]]**IGNITION**
-Combat.StruckByGore=[[RED]]**VAST DOOR GESTOLD BLOED**
-Combat.TargetDazed=Doelwit was [[DARK_RED]]versuft
-Combat.TouchedFuzzy=[[DARK_RED]]Je raakte Fuzzy aan. Je voelt je duizelig.
+Combat.StruckByGore=[[RED]]**YOU HAVE BEEN GORED**
+Combat.TargetDazed=Target was [[DARK_RED]]Dazed
+Combat.TouchedFuzzy=[[DARK_RED]]Touched Fuzzy. Felt Dizzy.
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
-Commands.AdminChat.Off=Alleen Admin tekst [[RED]]Uit
+Commands.AdminChat.Off=Admin Chat only [[RED]]Off
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
 Commands.AdminToggle=[[RED]]- Toggle admin chat
 Commands.Disabled=[[RED]]This command is disabled.
@@ -346,16 +346,16 @@ Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite 
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite
 Commands.Party.Invite=<player> [[RED]]- Send party invite
 Commands.Party.Join=Joined Party: {0}
-Commands.Party.Kick=[[RED]]Je bent gekickt uit de groep {0}!
-Commands.Party.Leave=[[RED]]Je hebt de party verlaten
+Commands.Party.Kick=[[RED]]You were kicked from party {0}!
+Commands.Party.Leave=[[RED]]You have left that party
 Commands.Party.Members=[[GREEN]]Party Members: {0}
-Commands.Party.None=[[RED]]Je bent niet in een party.
+Commands.Party.None=[[RED]]You are not in a party.
 Commands.Party.Quit=[[RED]]- Leave your current party
 Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
 Commands.Party.Toggle=[[RED]]- Toggle Party Chat
 Commands.Party=<party-name> [[RED]]- Create/Join designated party
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Power Level [[YELLOW]]Leaderboard--
-Commands.PowerLevel=[[DARK_RED]]Vermogen: [[GREEN]]{0}
+Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
 Commands.Skill.Invalid=[[RED]]That is not a valid skillname!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Leaderboard--
 Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
@@ -367,7 +367,7 @@ mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
 mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
-Commands.Party.InParty=[[GREEN]]Groep: {0}
+Commands.Party.InParty=[[GREEN]]Party: {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
 Party.Help.1=[[RED]]To join a passworded party, use /party <party-name> <password>
@@ -375,14 +375,14 @@ Party.Help.2=[[RED]]Consult /party ? for more information
 Party.Help.3=[[RED]]Use /party <party-name> to join or /party q to quit
 Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
 Party.Help.5=[[RED]]To password protect your party, use /party password <password>
-Party.Help.6=[[RED]]Om een speler uit je groep te kicken, gebruik /party <speler>
+Party.Help.6=[[RED]]To kick a player from your party, use /party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
-Party.InformedOnJoin={0} [[GREEN]] heeft je party gejoined
-Party.InformedOnQuit={0} [[GREEN]] heeft je party verlaten
+Party.InformedOnJoin={0} [[GREEN]] has joined your party
+Party.InformedOnQuit={0} [[GREEN]] has left your party
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
-Party.Locked=[[RED]]Groep is gesloten, alleen groepsleider kan uitnodigen.
+Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
 Party.NotOwner=[[DARK_RED]]You are not the party owner
 Party.PasswordSet=[[GREEN]]Party password set to {0}
@@ -395,16 +395,16 @@ Party.Unlocked=[[GRAY]]Party is unlocked
 Commands.XPGain.Acrobatics=Falling
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Attacking Monsters
-Commands.XPGain.Excavation=Graven en schatten vinden
-Commands.XPGain.Fishing=Vissen (wat denk je zelf?)
-Commands.XPGain.Herbalism=Kruiden Verzamelen
-Commands.XPGain.Mining=Het Mijnen van Steen & Erts
+Commands.XPGain.Excavation=Digging and finding treasures
+Commands.XPGain.Fishing=Fishing (Go figure!)
+Commands.XPGain.Herbalism=Harvesting Herbs
+Commands.XPGain.Mining=Mining Stone & Ore
 Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Attacking Monsters
-Commands.XPGain.Taming=Dieren Temmen, of vechten met je wolven
+Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
 Commands.XPGain.Unarmed=Attacking Monsters
 Commands.XPGain.WoodCutting=Chopping down trees
-Commands.XPGain=[[DARK_GRAY]]XP GEWONNEN: [[WHITE]]{0}
+Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
@@ -414,7 +414,7 @@ Commands.xprate.proper.2=[[RED]]Please specify true or false to indicate if this
 Commands.xprate.started.0=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
 Commands.xprate.started.1=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
 XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
-Effects.Effects=EFFECTEN
+Effects.Effects=EFFECTS
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
@@ -436,12 +436,12 @@ Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**CHIMAERA WING**
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
-Skills.Disarmed=[[DARK_RED]]Je bent ontwapend!
+Skills.Disarmed=[[DARK_RED]]You have been disarmed!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
-Skills.NeedMore=[[DARK_RED]]Je hebt te weinig
+Skills.NeedMore=[[DARK_RED]]You need more
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
-Skills.TooTired=[[RED]]Je bent te moe om die ability te gebruiken.
-Stats.Header.Combat=[[GOLD]]-=Strijd Ervaring=-
+Skills.TooTired=[[RED]]You are too tired to use that ability again.
+Stats.Header.Combat=[[GOLD]]-=COMBAT SKILLS=-
 Stats.Header.Gathering=[[GOLD]]-=GATHERING SKILLS=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
