--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -197,6 +197,7 @@ Swords.Ability.Ready=[[GREEN]]**\u4f60\u628a\u5251\u7d27\u63e1\u5728\u4e86\u624b
 Swords.Combat.Bleed.Chance=[[RED]]\u6d41\u8840\u51e0\u7387: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]\u6d41\u8840\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]\u6ce8\u610f: [[YELLOW]]\u6bcf\u4e24\u79d2\u51cf\u4e00\u6ef4\u8840
+Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u6d41\u8840 [[GREEN]]\u5df2\u505c\u6b62[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**\u654c\u4eba\u6b63\u5728\u4e0d\u65ad\u6d41\u8840**
 Swords.Combat.Counter.Chance=[[RED]]\u53cd\u51fb\u51e0\u7387: [[YELLOW]]{0}
