--- a/src/main/resources/locale/locale_no.properties
+++ b/src/main/resources/locale/locale_no.properties
@@ -197,6 +197,7 @@ Swords.Ability.Ready=[[GREEN]]**YOU READY YOUR SWORD**
 Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Bleed Length: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
+Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Bl\u00f8dningen har [[GREEN]]stoppet[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**FIENDE BL\u00d8R**
 Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
