--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -197,6 +197,7 @@ Swords.Ability.Ready=[[GREEN]]**\u041c\u0415\u0427 \u0412 \u0421\u041e\u0421\u04
 Swords.Combat.Bleed.Chance=[[RED]]\u0428\u0430\u043d\u0441 \u043d\u0430\u043d\u0435\u0441\u0442\u0438 \u041a\u0440\u043e\u0432\u043e\u0442\u043e\u0447\u0430\u0449\u0438\u0439 \u0423\u0434\u0430\u0440: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]\u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0441\u0442\u044c \u041a\u0440\u043e\u0432\u043e\u0442\u0435\u0447\u0435\u043d\u0438\u044f: [[YELLOW]]{0} \u0442\u0438\u043a\u043e\u0432
 Swords.Combat.Bleed.Note=[[GRAY]]\u0417\u0410\u041c\u0415\u0422\u041a\u0410: [[YELLOW]]1 \u0422\u0438\u043a \u0441\u043b\u0443\u0447\u0430\u0435\u0442\u0441\u044f \u043a\u0430\u0436\u0434\u044b\u0435 2 \u0441\u0435\u043a\u0443\u043d\u0434\u044b
+Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u041a\u0440\u043e\u0432\u043e\u0442\u0435\u0447\u0435\u043d\u0438\u0435 [[GREEN]]\u043f\u0440\u0435\u043a\u0440\u0430\u0442\u0438\u043b\u043e\u0441\u044c[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**\u0412\u0420\u0410\u0413 \u0418\u0421\u0422\u0415\u041a\u0410\u0415\u0422 \u041a\u0420\u041e\u0412\u042c\u042e**
 Swords.Combat.Counter.Chance=[[RED]]\u0428\u0430\u043d\u0441 \u041a\u043e\u043d\u0442\u0440\u0430\u0442\u0430\u043a\u0438: [[YELLOW]]{0}
